@@ -5,7 +5,7 @@
 
     <manvolnum>1</manvolnum>
 
-    <refmiscinfo class="date">24 Jul 2012</refmiscinfo>
+    <refmiscinfo class="date">06 May 2016</refmiscinfo>
 
     <refmiscinfo class="source">@NETATALK_VERSION@</refmiscinfo>
   </refmeta>
@@ -20,11 +20,30 @@
     <cmdsynopsis>
       <command>asip-status.pl</command>
 
+      <group choice="opt">
+        <arg choice="plain">-4</arg>
+        <arg choice="plain">-6</arg>
+      </group>
       <arg choice="opt">-d</arg>
       <arg choice="opt">-i</arg>
       <arg choice="opt">-x</arg>
 
-      <arg choice="plain">HOSTNAME[:PORT]</arg>
+      <arg choice="plain"><replaceable>HOSTNAME</replaceable></arg>
+      <arg choice="opt"><replaceable>PORT</replaceable></arg>
+    </cmdsynopsis>
+
+    <cmdsynopsis>
+      <command>asip-status.pl</command>
+
+      <group choice="opt">
+        <arg choice="plain">-4</arg>
+        <arg choice="plain">-6</arg>
+      </group>
+      <arg choice="opt">-d</arg>
+      <arg choice="opt">-i</arg>
+      <arg choice="opt">-x</arg>
+
+      <arg choice="plain"><replaceable>HOSTNAME</replaceable>:<replaceable>PORT</replaceable></arg>
     </cmdsynopsis>
 
     <cmdsynopsis>
@@ -42,20 +61,45 @@
   <refsect1>
     <title>DESCRIPTION</title>
 
-    <para><emphasis remap="B">asip-status.pl</emphasis> is a perl script that
-    sends a FPGetSrvrInfo request to an AFP server at HOSTNAME:PORT and
+    <para><command>asip-status.pl</command> is a perl script that
+    sends a FPGetSrvrInfo request to an AFP server at
+    <replaceable>HOSTNAME</replaceable>:<replaceable>PORT</replaceable> and
     displays the results, namely "Machine type", the server's name, supported
     AFP versions, UAMs and AFP flags, the "server signature" and the network
     addresses, the server provides AFP services on.</para>
 
-    <para>When you don't supply :PORT, then the default AFP port, 548, will be
-    used.</para>
+    <para>When you don't supply <replaceable>PORT</replaceable>, then the
+    default AFP port, 548, will be used.</para>
+
+    <para>Starting with Netatalk 3.1.9, <command>asip-status.pl</command>
+    supports both IPv4 and IPv6. It's decided by your system which IP version
+    to use. You can use -4 or -6 option to specify IP version.</para>
+
+    <note><para><command>asip-status.pl</command> requires IO::Socket::INET6
+    module.</para></note>
+
   </refsect1>
 
   <refsect1>
     <title>OPTIONS</title>
 
     <variablelist remap="TP">
+      <varlistentry>
+        <term><option>-4</option></term>
+
+        <listitem>
+          <para>Use IPv4 only.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><option>-6</option></term>
+
+        <listitem>
+          <para>Use IPv6 only.</para>
+        </listitem>
+      </varlistentry>
+
       <varlistentry>
         <term><option>-d</option></term>
 
@@ -94,8 +138,8 @@
   <refsect1>
     <title>EXAMPLES</title>
 
-    <para><programlisting><emphasis remap="B">asip-status.pl</emphasis> 192.168.1.15
-AFP reply from 192.168.1.15:548
+    <para><programlisting>$ <emphasis remap="B">asip-status.pl</emphasis> 192.168.1.15
+AFP reply from 192.168.1.15:548 via IPv4
 Flags: 1  Cmd: 3  ID: 57005
 Reply: DSIGetStatus
 Request ID: 57005
@@ -114,17 +158,17 @@ Server name: bookchan
 Signature:
 04 1d 65 23 04 1d 65 23 04 1d 65 23 04 1d 65 23  ..e#..e#..e#..e#
                                                   
-Network address: 192.168.1.15:548 (TCP/IP address and port)
+Network address: 192.168.1.15:548 (IPv4 address and port)
 Network address: 65280.128 (ddp address)
 </programlisting></para>
 
-    <para><programlisting><emphasis remap="B">asip-status.pl</emphasis> myserver:10548
-AFP reply from myserver:10548
+    <para><programlisting>$ <emphasis remap="B">asip-status.pl</emphasis> myserver:10548
+AFP reply from myserver:10548 via IPv6
 Flags: 1  Cmd: 3  ID: 57005
 Reply: DSIGetStatus
 Request ID: 57005
-Machine type: Netatalk3.0
-AFP versions: AFP2.2,AFPX03,AFP3.1,AFP3.2,AFP3.3
+Machine type: Netatalk3.1.9
+AFP versions: AFP2.2,AFPX03,AFP3.1,AFP3.2,AFP3.3,AFP3.4
 UAMs: DHX2,DHCAST128
 Volume Icon &amp; Mask: Yes
 Flags: 
@@ -140,9 +184,9 @@ Flags:
     SupportsSuperClient
 Server name: myserver
 Signature:
-8a c6 12 3a 0e d9 95 3e 6f 31 e3 a9 17 f5 70 f6  ...:...>o1....p.
+ea 56 61 0d bf 29 36 31 fa 6a 8a 24 a8 f0 cc 1d  .Va..)61.j.$....
                                                   
-Network address: 192.168.1.154:10548 (TCP/IP address and port)
+Network address: [fd00:0000:0000:0000:0000:0000:0001:0160]:10548 (IPv6 address + port)
 UTF8 Servername: myserver
 </programlisting></para>
   </refsect1>
